[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scr/Main.gd" type="Script" id=1]
[ext_resource path="res://Scn/BG.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scn/City.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scn/Battery.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scr/Cross.gd" type="Script" id=5]
[ext_resource path="res://Misc/Cross.shader" type="Shader" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://Snd/Tornado Siren-SoundBible.com-897026957.wav" type="AudioStream" id=8]
[ext_resource path="res://Snd/Wind-Mark_DiAngelo-1940285615.wav" type="AudioStream" id=9]
[ext_resource path="res://Scn/BonusDisplay.tscn" type="PackedScene" id=10]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 6 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Font/LiberationSansNarrow-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 21
font_data = SubResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 384 )

[node name="City0" parent="." instance=ExtResource( 3 )]
position = Vector2( 260.934, 683.844 )

[node name="City1" parent="." instance=ExtResource( 3 )]
position = Vector2( 368.697, 683.407 )

[node name="City2" parent="." instance=ExtResource( 3 )]
position = Vector2( 315.183, 707.981 )

[node name="City3" parent="." instance=ExtResource( 3 )]
position = Vector2( 652.93, 683.07 )

[node name="City4" parent="." instance=ExtResource( 3 )]
position = Vector2( 747.056, 679.538 )

[node name="City5" parent="." instance=ExtResource( 3 )]
position = Vector2( 702.89, 709.928 )

[node name="Battery0" parent="." instance=ExtResource( 4 )]
position = Vector2( 113.087, 607.68 )

[node name="Battery1" parent="." instance=ExtResource( 4 )]
position = Vector2( 511, 608 )

[node name="Battery2" parent="." instance=ExtResource( 4 )]
position = Vector2( 911, 608 )

[node name="Cross" type="Node2D" parent="."]
position = Vector2( 512, 384 )
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="Cross"]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -32.0
margin_right = 60.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.125, 1 )
texture = ExtResource( 7 )
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Cross"]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 31.0
margin_top = -4.0
margin_right = 95.0
margin_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
rect_rotation = 90.0
rect_scale = Vector2( 0.125, 1 )
texture = ExtResource( 7 )
stretch_mode = 1

[node name="HUD" type="RichTextLabel" parent="."]
margin_left = 4.0
margin_top = 2.0
margin_right = 189.0
margin_bottom = 63.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.768627, 1, 0.509804, 1 )
text = "Level:0
Score:0"
scroll_active = false

[node name="snd_siren" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 512, 768 )
stream = ExtResource( 8 )

[node name="snd_over" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 512, 384 )
stream = ExtResource( 9 )

[node name="BonusDisplay" parent="." instance=ExtResource( 10 )]
